#40 友達リクエスト機能

--- a/htdocs/view/scss/mypage.css
+++ b/htdocs/view/scss/mypage.css
@@ -1,5 +1,6 @@
 * {
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   margin: 0;
   padding: 0;
   word-wrap: break-word;
@@ -32,8 +33,11 @@ main {
 }
 
 ::-webkit-scrollbar-thumb {
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#D0368A), color-stop(99%, #708AD4));
+  background-image: -webkit-linear-gradient(top, #D0368A 0%, #708AD4 99%);
   background-image: linear-gradient(180deg, #D0368A 0%, #708AD4 99%);
-  box-shadow: inset 2px 2px 2px 0 rgba(255, 255, 255, 0.5);
+  -webkit-box-shadow: inset 2px 2px 2px 0 rgba(255, 255, 255, 0.5);
+          box-shadow: inset 2px 2px 2px 0 rgba(255, 255, 255, 0.5);
   border-radius: 10px;
 }
 
@@ -96,9 +100,18 @@ select {
 
 .btn {
   position: relative;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
   margin: 15px 0;
   width: 120px;
   height: 50px;
@@ -112,6 +125,7 @@ select {
   border-radius: 10px;
   cursor: pointer;
   z-index: 1;
+  -webkit-transition: 0.3s;
   transition: 0.3s;
 }
 .btn--normal::before {
@@ -123,6 +137,7 @@ select {
   height: calc(100% - 5px);
   border: 3px solid #FDCAEC;
   border-radius: 10px;
+  -webkit-transition: 0.3s;
   transition: 0.3s;
 }
 .btn--normal:hover::before {
@@ -141,6 +156,7 @@ select {
   height: calc(100% - 5px);
   border: 3px solid #CBCDFF;
   border-radius: 10px;
+  -webkit-transition: 0.3s;
   transition: 0.3s;
 }
 .btn--back:hover::before {
@@ -206,13 +222,22 @@ select {
   margin-top: 50px;
   width: 100%;
   height: 200px;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
   display: flex;
 }
 .mypage-top .icon-position {
   width: 25%;
   height: 100%;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: right;
+  -webkit-box-pack: right;
+  -webkit-justify-content: right;
+      -ms-flex-pack: right;
+          justify-content: right;
   padding-right: 10px;
 }
 .mypage-top .icon-position .icon {
@@ -241,8 +266,13 @@ select {
 .mypage-top .name-position .friends {
   width: 100%;
   height: 50%;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-around;
+  -webkit-justify-content: space-around;
+      -ms-flex-pack: distribute;
+          justify-content: space-around;
   padding-right: 50px;
 }
 .mypage-top .name-position .friends__people, .mypage-top .name-position .friends__request {
@@ -282,8 +312,11 @@ select {
   left: -5px;
   top: 12px;
   width: 105px;
+  background: -webkit-gradient(linear, left top, right top, from(#E7E8FF), to(#CBCDFF));
+  background: -webkit-linear-gradient(left, #E7E8FF 0%, #CBCDFF 100%);
   background: linear-gradient(to right, #E7E8FF 0%, #CBCDFF 100%);
-  transform: rotate(45deg);
+  -webkit-transform: rotate(45deg);
+          transform: rotate(45deg);
 }
 .mypage-top .comment-position .comment__righttop span::before, .mypage-top .comment-position .comment__righttop span::after {
   position: absolute;
@@ -308,8 +341,14 @@ select {
 .mypage-top .btn-position {
   width: 25%;
   height: 100%;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: left;
+  -webkit-box-pack: left;
+  -webkit-justify-content: left;
+      -ms-flex-pack: left;
+          justify-content: left;
   padding-top: 70px;
 }
 .mypage-top .btn-position .btn {
@@ -337,6 +376,7 @@ select {
   text-align: center;
   font-weight: bold;
   overflow: hidden;
+  -webkit-transition: all 0.2s ease;
   transition: all 0.2s ease;
 }
 .mypage-bottom .tab .tab_item:hover {
@@ -351,7 +391,8 @@ select {
   padding: 20px;
   clear: both;
   border-radius: 0 0 10px 10px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  -webkit-box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+          box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 }
 .mypage-bottom .tab__contents {
   list-style: none;
@@ -366,12 +407,21 @@ select {
   height: 50px;
 }
 .mypage-bottom .tab .contents__top {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
   display: flex;
   border-bottom: 2px solid #CBCDFF;
 }
 .mypage-bottom .tab .contents__bottom {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 .mypage-bottom .tab .contents__main {
   position: relative;
@@ -392,6 +442,9 @@ select {
   font-size: 10px;
 }
 .mypage-bottom .tab .contents__response {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
   display: flex;
   border-bottom: 3px solid #CBCDFF;
   border-left: 3px solid #CBCDFF;
@@ -402,8 +455,14 @@ select {
   height: 100%;
   border-right: 2px solid #CBCDFF;
   overflow: hidden;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 .mypage-bottom .tab .contents__resdatetime {
   width: 40%;
@@ -412,11 +471,20 @@ select {
   padding: 12px;
 }
 .mypage-bottom .tab .contents__sub {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
   display: flex;
   margin-bottom: 20px;
-  justify-content: space-between;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 .mypage-bottom .tab .contents__admin {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
   display: flex;
   width: 50%;
 }
@@ -459,6 +527,39 @@ select {
   border-right: 3px solid #CBCDFF;
   border-left: 3px solid #CBCDFF;
   cursor: pointer;
+}
+.mypage-bottom .tab .contents__good .goldstar::before {
+  content: "\f005";
+  font-family: "Font Awesome 5 Free";
+  font-weight: 900;
+  color: gold;
+  -webkit-animation: inherit star 1s linear infinite;
+          animation: inherit star 1s linear infinite;
+}
+@-webkit-keyframes star {
+  0% {
+    -webkit-transform: rotateX(0deg);
+            transform: rotateX(0deg);
+  }
+  100% {
+    -webkit-transform: rotateX(360deg);
+            transform: rotateX(360deg);
+  }
+}
+@keyframes star {
+  0% {
+    -webkit-transform: rotateX(0deg);
+            transform: rotateX(0deg);
+  }
+  100% {
+    -webkit-transform: rotateX(360deg);
+            transform: rotateX(360deg);
+  }
+}
+.mypage-bottom .tab .contents__good .whitestar::before {
+  content: "\f005";
+  font-family: "Font Awesome 5 Free";
+  -webkit-text-stroke: 1px white;
 }
 .mypage-bottom .tab .contents__char-center {
   padding-top: 20px;
@@ -507,8 +608,14 @@ select {
   display: block;
 }
 .mypage-bottom .tab .page-btn {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   margin-top: 40px;
 }
 .mypage-bottom .tab .page-btn--previous, .mypage-bottom .tab .page-btn--next, .mypage-bottom .tab .page-btn--first, .mypage-bottom .tab .page-btn--last {
