--- a/htdocs/view/scss/userdetail.css
+++ b/htdocs/view/scss/userdetail.css
@@ -358,23 +358,28 @@ select {
 }
 .profile-top .btn-position {
   width: 25%;
-  height: 100%;
+  height: 80%;
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: left;
-  -webkit-justify-content: left;
-      -ms-flex-pack: left;
-          justify-content: left;
-  padding-top: 70px;
+  -webkit-box-pack: end;
+  -webkit-justify-content: flex-end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  -webkit-box-align: start;
+  -webkit-align-items: flex-start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 .profile-top .btn-position .btn {
   margin-left: 15px;
   width: 200px;
-}
-.profile-top .btn-position .none {
-  display: none;
 }
 
 .profile-bottom {
