--- a/htdocs/view/scss/userdetail.scss
+++ b/htdocs/view/scss/userdetail.scss
@@ -201,18 +201,16 @@
 
     .btn-position {
         width: 25%;
-        height: 100%;
+        height: 80%;
         display: flex;
-        justify-content: left;
-        padding-top: 70px;
+        justify-content: flex-end;
+        align-items: flex-start;
+        flex-direction: column;
+        // padding-top: 70px;
 
         .btn {
             margin-left: 15px;
             width: 200px;
-        }
-
-        .none {
-            display: none;
         }
     }
 }
